[tool.poetry]
name = "metro-minute"
version = "0.1.0"
description = "Easily get next metro or RER schedules"
authors = ["WLDCH <wchrimni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
configparser = "^7.0.0"
dbt-core = "^1.8.0"
dbt-postgres = "^1.8.0"
pytz = "^2024.1"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

